Fixed nav-pills navigation issue on iPhone.

--- a/MyCloudCode/src/less/cards.less
+++ b/MyCloudCode/src/less/cards.less
@@ -5,8 +5,8 @@
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 1px;
-  box-shadow: -1px -3px 3px #888888;
   background:white;
+  border-style: solid；
   border-radius:3px;
   margin-bottom: 5px;
   cursor: pointer;
